--- a/TodoList/app/src/main/res/values/strings.xml
+++ b/TodoList/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">                To-Do List</string>
+    <string name="app_name">To-Do List</string>
     <string name="main_activity_name">All Tasks</string>
     <string name="add_task_activity_name">Add a New Task</string>
 
@@ -11,12 +11,13 @@
     <!-- Strings for AddTaskActivity -->
     <!-- This edit task has a unicode character for "..." = "&#8230;" -->
     <string name="edit_task_description">Describe your task&#8230;</string>
-    <string name="priority_string">Priority</string>
+    <string name="priority_string">우선순위</string>
 
-    <string name="high_priority">High</string>
-    <string name="med_priority">Medium</string>
-    <string name="low_priority">Low</string>
+    <string name="high_priority">높음</string>
+    <string name="med_priority">보통</string>
+    <string name="low_priority">낮음</string>
 
-    <string name="add_button">Add</string>
+    <string name="add_button">추가</string>
+    <string name="update_button">Update</string>
 
 </resources>
